--- a/jpiere.fragment.org.adempiere.ui.zk/theme/jpiere/css/report.css
+++ b/jpiere.fragment.org.adempiere.ui.zk/theme/jpiere/css/report.css
@@ -19,28 +19,64 @@
 	white-space: nowrap;
 }
 
+.rp-table tr:last-child {
+	border-bottom-width: 1px;
+}
+
 .rp-table th {
 
 	position: sticky;
-    top: 0;
+    top: 2px;
     z-index: 1;
 
 	text-align:left;
 	padding: 4px;
 	font-weight: bold;
 	background-color: #E9F0FF;
+
+
+	/**************************************************************************************
+	 When I use Edege ,
+	 Border Line of TH element could not follow the scroll in case of the position: sticky;
+	 So, I did comment out below and move to ".rp-table th::after"
+	***************************************************************************************/
+	/*
 	border-style: solid;
-	border-color: #003894 #bbbbbb;
+	border-color: #003894  #bbbbbb;
 	border-width: 2px 0px 2px 1px;
+	*/
 }
 
+/*
 .rp-table th:last-child {
 	border-right-width: 1px;
 }
+*/
 
-.rp-table tr:last-child {
-	border-bottom-width: 1px;
+/**************************************************************************************
+ When I use Edege ,
+ Border Line of TH element could not follow the scroll in case of the position: sticky;
+ So, I did comment out below and move to ".rp-table th::after"
+***************************************************************************************/
+.rp-table th::after {
+	content: '';
+    position: absolute;
+    display: block;
+    top : -2px;
+    left: -1px;
+    width: 100%;
+    height: 100%;
+
+	border-style: solid;
+	border-color: #003894  #bbbbbb;
+    border-width: 2px 0px 2px 1px;
+
 }
+
+.rp-table th:last-child::after {
+	border-right-width: 1px;
+}
+
 
 .rp-table td {
 	border-width: 1px 0px 0px 1px;
